initial commit with working endpoints and crud operations for factory devices and maintenance tasks

--- a/EtteplanMORE.ServiceManual.Web/appsettings.json
+++ b/EtteplanMORE.ServiceManual.Web/appsettings.json
@@ -1,4 +1,8 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost; Database=ServiceManualDB; User Id=sa; Password=password123; TrustServerCertificate=True"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
