--- a/EtteplanMORE.ServiceManual.Web/EtteplanMORE.ServiceManual.Web.csproj
+++ b/EtteplanMORE.ServiceManual.Web/EtteplanMORE.ServiceManual.Web.csproj
@@ -10,4 +10,17 @@
     <ProjectReference Include="..\EtteplanMORE.ServiceManual.ApplicationCore\EtteplanMORE.ServiceManual.ApplicationCore.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="Swashbuckle.AspNetCore" />
+    <None Remove="Microsoft.EntityFrameworkCore.SqlServer" />
+    <None Remove="Microsoft.EntityFrameworkCore.Design" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.4">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+  </ItemGroup>
 </Project>
